--- a/c2/Cargo.toml
+++ b/c2/Cargo.toml
@@ -10,10 +10,15 @@ serde_json = "1.0.140"
 serde = { version = "1.0.219", features = ["derive"]}
 tokio = { version = "1.45.0", features = ["full"]}
 async-trait = "0.1.88"
-socket2 = "0.5.9"
+socket2 = "0.5.10"
 tokio-util = {version = "0.7.15", features = ["full"] }
 bytes = "1.10.1"
 futures = "0.3.31"
-clap = { version = "4.5.38", features = ["derive"] }
-uuid = { version = "1.16.0", features = ["v4"]}
+clap = { version = "4.5.39", features = ["derive"] }
+uuid = { version = "1.17.0", features = ["v4"]}
 shell-words = "1.1.0"
+actix-web = { version = "4", features = ["rustls-0_23"] }
+actix-rt = "2"
+rustls = "0.23.27"
+actix-web-lab = "0.24.1"
+rustls-pemfile = "2.2.0"
