--- a/infect/Cargo.toml
+++ b/infect/Cargo.toml
@@ -28,3 +28,9 @@ futures = "0.3.31"
 toml = "0.8.23"
 config = "0.15.11"
 zeroize = "1.8.1"
+actix-web = { version = "4", features = ["rustls-0_23"] }
+actix-rt = "2"
+rustls = "0.23.27"
+actix-web-lab = "0.24.1"
+reqwest = { version = "0.12.20", features = ["json", "rustls-tls"] }
+async-trait = "0.1"
