--- a/infect/config_windows.toml
+++ b/infect/config_windows.toml
@@ -1,5 +1,5 @@
 # Config.toml
-server_address = "127.0.0.1:6969"
+server_address = "http://127.0.0.1:6969"
 log_path = "files\\ransom_log.txt"
 target_path = "C:\\Users"
 note_path = "C:\\Users\\Public\\ransom_target"
@@ -7,4 +7,4 @@ key_path = "C:\\Users\\Public\\ransom_target"
 extension = "pwned"
 retries = 3
 timeout_seconds = 10
-service = "TCP"
+service = "HTTP"
